# tf_to_trajectory

./: CMakeLists.txt  README.md  package.xml
launch/: gazebo_gt_to_path.launch  multi_posestamped_to_multi_path.launch  odom_to_path.launch  odom_to_path2.launch  posestamped_to_path.launch  tf_to_path.launch
scripts/: gazebo_gt_to_path.py  odom_to_path.py  posestamped_to_path.py  tf_to_path.py
