<?xml version="1.0"?>
<package format="2">
  <name>tf_to_trajectory</name>
  <version>0.0.0</version>
  <description>The tf_to_trajectory package</description>

  <maintainer email="mason@kaist.ac.kr">mason</maintainer>

  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
